Fix some spacings

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ a{
 }
 
 .rel-head{
-    margin-block-start: 0.5vw;
+    margin-block-start: 0.75vw;
     margin-block-end: 0px;
     font-size: 2vw;
     font-weight: 700;
@@ -173,7 +173,8 @@ a{
     .rel-txt{font-size: 4vw;}
     .rel-subtxt{
         font-size: 3vw;
-        margin-block-start: 1vw;
+        margin-block-start: 1.25vw;
     }
+    .marg-1{margin-right: 2vw;}
 }
 
